# photosite

./: .gitignore  docker-compose.development.yml  docker-compose.preproductional.yml  docker-compose.yml  nginx.conf
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/photosite-application/: gunicorn.conf.py  logging_config.py  main.py  wsgi.py
backend/photosite-application/alembic/: env.py
backend/photosite-application/alembic/versions/: 2025_12_17_1702-1f8fbb63789f_starting_point.py  2025_12_20_1001-ef301fc06c5c_fields_cover_and_description_added_to_.py  2025_12_21_1625-1d29ec4fa070_user_model_added.py  2026_01_13_1648-0a08638dcb71_event_created_field_added.py  2026_02_05_1700-73cd496f2fc6_unique_file_paths_constraint_added.py  2026_02_05_1808-cf6cf03e8e12_aware_time_added_to_picture_model.py  2026_02_14_1813-12f188560336_cover_made_required.py  2026_02_15_0823-1027af858626_active_field_added_to_event.py  2026_02_28_1610-16a1cde3bf47_blog_added_to_categories.py  2026_02_28_1624-cb6d9bbab6f1_blog_added_to_categories_twice.py  2026_03_02_2031-8c418303252d_start_from_stratch.py
backend/photosite-application/api/: __init__.py
backend/photosite-application/api/api_v1/: __init__.py  events.py  pictures.py  users.py
backend/photosite-application/core/: config.py
backend/photosite-application/core/models/: __init__.py  base.py  category.py  db_helper.py  event.py  picture.py  user.py
backend/photosite-application/core/schemas/: category.py  event.py  picture.py  user.py
backend/photosite-application/crud/: events.py  pictures.py  users.py
backend/photosite-application/exceptions/: user.py
backend/photosite-application/tests/: __init__.py  conftest.py  pytest.ini
backend/photosite-application/tests/test_api/: test_events.py  test_pictures.py  utils.py
backend/photosite-application/tests/test_utils/: test_general_utils.py  test_pictures_utils.py
backend/photosite-application/utils/: authorization.py  caching.py  general.py  pictures.py
frontend/: .dockerignore  Dockerfile  nginx.conf
frontend/photosite-front/: index.html  package-lock.json  package.json
frontend/photosite-front/src/: App.css  App.jsx  main.jsx
(+46 files in other folders)
