[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for photographer's personal site"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "bcrypt==4.0.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "orjson>=3.11.5",
    "passlib==1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.38.0",
    "fastapi-cache2>=0.2.2",
    "redis>=7.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "types-passlib>=1.7.7.20250602",
    "types-aiofiles>=25.1.0.20251011",
    "types-requests>=2.32.4.20260107",
    "aiosqlite>=0.22.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
]
